; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/msconfig/extr_generalpage.c_EnableCheckboxControls.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/msconfig/extr_generalpage.c_EnableCheckboxControls.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IDC_CBX_SYSTEM_INI = common dso_local global i32 0, align 4
@IDC_CBX_SYSTEM_SERVICE = common dso_local global i32 0, align 4
@IDC_CBX_STARTUP_ITEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @EnableCheckboxControls(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @IDC_CBX_SYSTEM_INI, align 4
  %8 = call i32 @GetDlgItem(i32 %6, i32 %7)
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @EnableWindow(i32 %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @IDC_CBX_SYSTEM_SERVICE, align 4
  %13 = call i32 @GetDlgItem(i32 %11, i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @EnableWindow(i32 %13, i32 %14)
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @IDC_CBX_STARTUP_ITEM, align 4
  %18 = call i32 @GetDlgItem(i32 %16, i32 %17)
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @EnableWindow(i32 %18, i32 %19)
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @EnableWindow(i32, i32) #1

declare dso_local i32 @GetDlgItem(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
